--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,9 @@
     <a href="/series" class="button">
       <i class="fa-solid fa-list-ol fa-lg"></i>
     </a>
+    <a href="/tags" class="button">
+      <i class="fa-solid fa-tag fa-lg"></i>
+    </a>
     <a href="/logout" class="button">
       <i class="fa-solid fa-arrow-right-from-bracket fa-lg"></i>
     </a>
