--- a/views/tags/new.ejs
+++ b/views/tags/new.ejs
@@ -1,13 +1,13 @@
-<h2>New Series</h2>
+<h2>New Tags</h2>
 
-<form action="/series" method="POST">
+<form action="/tags" method="POST">
   <div class="row">
     <div class="offset-by-one-third one-third column">
       <%- include('_form.ejs') %>
     </div>
   </div>
   <div class="btn-group">
-    <a class="button" href="/series">Cancel</a>
+    <a class="button" href="/tags">Cancel</a>
     <button type="submit">Create</button>
   </div>
 </form>
