--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -4,8 +4,10 @@
   <div class="row">
     <div class="offset-by-one-third one-third column">
       <%- include('_form.ejs') %>
-      <a class="button" href="/authors">Cancel</a>
-      <button type="submit">Create</button>
     </div>
+  </div>
+  <div class="btn-group">
+    <a class="button" href="/authors">Cancel</a>
+    <button type="submit">Create</button>
   </div>
 </form>
