--- a/views/series/_form.ejs
+++ b/views/series/_form.ejs
@@ -1,5 +1,10 @@
 <label>Name</label>
-<input type="text" name="name" value="<%= series.name %>" />
+<input
+  class="u-full-width"
+  type="text"
+  name="name"
+  value="<%= series.name %>"
+/>
 <label>Access Level</label>
 <input
   class="u-full-width"
