--- a/views/tags/_form.ejs
+++ b/views/tags/_form.ejs
@@ -1,10 +1,5 @@
 <label>Name</label>
-<input
-  class="u-full-width"
-  type="text"
-  name="name"
-  value="<%= author.name %>"
-/>
+<input class="u-full-width" type="text" name="name" value="<%= tag.name %>" />
 <label>Access Level</label>
 <input
   class="u-full-width"
@@ -12,5 +7,5 @@
   min="1"
   max="4"
   name="accessLevel"
-  value="<%= author.accessLevel %>"
+  value="<%= tag.accessLevel %>"
 />
