--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -55,6 +55,7 @@
       <%- include('../partials/header.ejs') %>
       <%- include('../partials/errorMessage.ejs') %>
       <%- body %>
+      <%- include('../partials/footer.ejs') %>
     </div>
   </body>
 </html>
