--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,5 +1,5 @@
 <% if (locals.errorMessage != null) { %>
-<div class="alert" role="alert"><%= errorMessage %></div>
+<div class="alert text-center" role="alert"><%= errorMessage %></div>
 <% } %> <% if (messages.error) { %>
 <div class="alert"><%= messages.error %></div>
 <% } %>
