--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,17 +1,7 @@
 <h2><%= author.name %></h2>
 
-<% if (user.role = "admin") { %>
-<div class="row">
-  <div class="offset-by-eight two columns">
-    <a class="button" href="/authors/<%= author.id %>/edit">
-      <i class="fa-solid fa-pen fa-lg"></i>
-    </a>
-  </div>
-  <div class="two columns">
-    <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
-  </div>
-</div>
-<% } %>
+<%- include('../partials/adminButtons.ejs', { url: `/authors/${author.id}` }) %>
+
 <% if (booksByAuthor.length > 0) { %>
 <h3>Books by Author</h3>
 <% booksByAuthor.forEach(book => { %>
