--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -29,7 +29,7 @@
       />
     </div>
   </div>
-  <div class="btn-group">
+  <div class="text-center">
     <button type="submit">Search</button>
   </div>
 </form>
