--- a/views/tags/index.ejs
+++ b/views/tags/index.ejs
@@ -1,44 +1,13 @@
 <h2>Search Tags</h2>
 
-<div class="row">
-  <div class="offset-by-three six columns">
-    <form action="/tags" method="GET">
-      <input
-        class="u-full-width"
-        type="text"
-        name="name"
-        value="<%= searchOptions.name %>"
-      />
-      <div class="btn-group">
-        <button type="submit">
-          <i class="fa-solid fa-search fa-lg"></i>
-        </button>
-      </div>
-    </form>
-  </div>
-</div>
+<<%- include('../partials/searchOptions.ejs', { url: "/tags" }) %>
 
-<% tags.forEach(tag => { %>
 <div class="row">
-  <div class="one-half column"><%= tag.name %></div>
-  <div class="one-half column">
-    <div class="row">
-      <div class="four columns">
-        <a class="button" href="/tags/<%= tag.id %>">
-          <i class="fa-solid fa-eye fa-lg"></i>
-        </a>
-      </div>
-      <% if (user.role = "admin") { %>
-      <div class="four columns">
-        <a class="button" href="/tags/<%= tag.id %>/edit">
-          <i class="fa-solid fa-pen fa-lg"></i>
-        </a>
-      </div>
-      <div class="four columns">
-        <%- include('../partials/deleteForm', { url: `/tags/${tag.id}` }) %>
-      </div>
-      <% } %>
-    </div>
+  <div class="offset-by-one-third one-third column">
+    <ul>
+      <% tags.forEach(tag => { %>
+      <li><a href="/tags/<%= tag.id %>"><%= tag.name %></a></li>
+      <% }) %>
+    </ul>
   </div>
 </div>
-<% }) %>
