--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -6,7 +6,7 @@
       <%- include('_form.ejs') %>
     </div>
   </div>
-  <div class="btn-group">
+  <div class="text-center">
     <a class="button" href="/authors">Cancel</a>
     <button type="submit">Create</button>
   </div>
