--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -2,7 +2,7 @@
 
 <form action="/books/<%= book.id %>?_method=PUT" method="POST">
   <%- include('_form.ejs') %>
-  <div class="btn-group">
+  <div class="text-center">
     <a class="button" href="/books">Cancel</a>
     <button type="submit">Update</button>
   </div>
