--- a/views/partials/adminButtons.ejs
+++ b/views/partials/adminButtons.ejs
@@ -1,4 +1,4 @@
-<% if (user.role = "admin") { %>
+<% if (user.role == "admin") { %>
 <div class="row text-center">
   <div class="offset-by-eight two columns">
     <a class="button" href="<%= url %>/edit">
