--- a/views/tags/index.ejs
+++ b/views/tags/index.ejs
@@ -1,6 +1,6 @@
 <h2>Search Tags</h2>
 
-<<%- include('../partials/searchOptions.ejs', { url: "/tags" }) %>
+<%- include('../partials/searchOptions.ejs', { url: "/tags" }) %>
 
 <div class="row">
   <div class="offset-by-one-third one-third column">
