--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,15 +1,43 @@
+html, body { height: 100%; }
 body { font-size: 1.8rem; }
+.container { min-height: 100%; }
 header { text-align: center; padding-top: 2rem; margin-bottom: 4rem; }
 header h1 a { text-decoration: none; line-height: 1.5; letter-spacing: -.05rem; }
 h2 { text-align: center; }
 .alert { margin-bottom: 2rem; padding: 25px 15px; border: 1px solid #bbb; border-radius: 5px; }
 
-a.cover { text-decoration: none; }
-a.cover img { width: 150px; height: 100%; }
 img { border-radius: 5px; }
-img.blur { filter: blur(5px); transition: 0.5s ease-in-out; }
-img.blur:hover { filter: blur(0); transition: 0.5s ease-in-out; }
+a.cover { text-decoration: none; }
+a.cover img { max-width: 100%; height: 100%; }
+@media (min-width: 375px) { 
+  a.cover img { width: 175px; }
+}
+@media (min-width: 750px) {
+  a.cover img { width: 200px; }
+}
+@media (min-width: 1200px) {
+  a.cover img { width: 225px; }
+}
 
+
+figure {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+}
+figure img { opacity: 0.1; transition: 0.5s ease-in-out; }
+figure:hover img { opacity: 1; transition: 0.5s ease-in-out; }
+figcaption {
+  position: absolute;
+  z-index: 999;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  top: 30%;
+  text-align: center;
+  width: 75%;
+}
+figure:hover figcaption { opacity: 0; transition: 0.5s ease-in-out; }
 form textarea { height: 236px; }
 form #tags { min-height: 100px; }
 p#tags a:not(:last-child) { padding-right: 0.5em; }
@@ -17,10 +45,7 @@ p#tags a:not(:last-child) { padding-right: 0.5em; }
 .text-center { text-align: center; }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  margin-top: 5em;
   width: 100%;
   text-align: center;
-  margin-top: 1em;
 }
