--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -2,7 +2,7 @@
 
 <form action="/books" method="POST">
   <%- include('_form.ejs') %>
-  <div class="btn-group">
+  <div class="text-center">
     <a class="button" href="/books">Cancel</a>
     <button type="submit">Create</button>
   </div>
