--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,10 +38,24 @@
         <div class="row">
           <div class="offset-by-one-third one-third column">
             <label for="username">Username</label>
-            <input type="text" name="username" id="username" required />
+            <input
+              type="text"
+              name="username"
+              id="username"
+              class="u-full-width"
+              required
+            />
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" required />
-            <button type="submit">Login</button>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              class="u-full-width"
+              required
+            />
+            <div class="text-center">
+              <button type="submit">Login</button>
+            </div>
           </div>
         </div>
       </form>
