--- a/views/tags/edit.ejs
+++ b/views/tags/edit.ejs
@@ -6,7 +6,7 @@
       <%- include('_form.ejs') %>
     </div>
   </div>
-  <div class="btn-group">
+  <div class="text-center">
     <a class="button" href="/tags/<%= tag.id %>">Cancel</a>
     <button type="submit">Update</button>
   </div>
