--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -53,7 +53,7 @@
   <body>
     <div class="container">
       <%- include('../partials/header.ejs') %>
-      <%- include('../partials/errorMessage.ejs') %>
+      <%- include('../partials/messages.ejs') %>
       <%- body %>
       <%- include('../partials/footer.ejs') %>
     </div>
