--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
       </header>
 
       <h2>Login</h2>
-      <%- include('./partials/errorMessage.ejs') %>
+      <%- include('./partials/messages.ejs') %>
       <form action="/login" method="post">
         <div class="row">
           <div class="offset-by-one-third one-third column">
